--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Movies#index</h1>
-<p>Find me in app/views/movies/index.html.erb</p>
+<h2>Top 100 Movies</h2>
+
+<ol class="ml-5">
+  <% @movies.each do | m | %>
+    <li>
+      <%= link_to m.title, m %> was produced by
+      <%= link_to m.production_company.name, m.production_company %>
+    </li>
+  <% end %>
+</ol>
+
+
+
