--- a/app/views/production_companies/show.html.erb
+++ b/app/views/production_companies/show.html.erb
@@ -1,2 +1,5 @@
-<h1>ProductionCompanies#show</h1>
-<p>Find me in app/views/production_companies/show.html.erb</p>
+<h2 class="title is-2"><%= @production_company.name %></h2>
+<p>
+  This production company <%= @production_company.movies.count %>
+  of the top 100 movies.
+</p>
