--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,11 @@
         </li>
       <% end %>
     </ol>
+     <p class="mt-5">
+      <strong><%= link_to 'See the Top 100 Movies', movies_path %></strong>
+    </p>
+
+
   </div>
 
   <div class="column">
@@ -20,5 +25,8 @@
         </li>
       <% end %>
     </ol>
+   <p class="mt-5">
+      <strong><%= link_to 'See the Top Production COmpanies', production_companies_path %></strong>
+    </p>
   </div>
 </div>
