Fix the bug with edit/update action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
         <h1 class="title is-1">Top Movies From IMDB</h1>
        </div>
       <%= yield %>
-    </section>
 
+    </section>
+    <%= render partial: 'common/footer'%>
   </body>
 </html>
