--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -29,7 +29,11 @@
   </strong>
   <%= movie.duration %> minutes
 </p>
-
+<p>
+  <strong>Genres:</strong>
+  <%# movie.genres.map(&:name).join(", ") %>
+  <%= movie.genres_list %>
+</p>
 <p>
   <strong>Production company</strong>
   <%= link_to movie.production_company.name, movie.production_company %>
