--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     </section>
     <%= render partial: 'common/footer'%>
     <% cms_pages.each do |page| %>
-      <li><%= link_to page.title, permalink_path(page.permalink) %></li>
+      <li><%= link_to page.title, page_path(page.permalink) %></li>
     <% end %>
   </body>
 </html>
